--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <a-entity id="left-hand" static-body="shape: sphere; sphereRadius: 0.1" hand-controls="left" trigger-reset></a-entity>
   <a-entity id="right-hand" static-body="shape: sphere; sphereRadius: 0.1" hand-controls="right" trigger-reset></a-entity>
 
-  <!-- Need to generate a stack of boxes to destroy -->
-  <a-box color="#CC0000" dynamic-body position="0.0 2.0 0.0" width="0.5" height="0.5" depth="0.5"></a-box>
 
   <!-- Generate a ground plane -->
-  <a-plane rotation="-90 0 0" height="50" width="50" color="#CCCC33" static-body></a-plane>
+  <a-plane city rotation="-90 0 0" height="50" width="50" color="#CCCC33" static-body>
+    <!-- Need to generate a stack of boxes to destroy -->
+    <!-- <a-box color="#FF0000" dynamic-body position="0.0 2.0 0.0" width="0.1" height="0.1" depth="0.1"></a-box> -->
+  </a-plane>
 
   <!-- Generate a few buildings that are destroyed when the hands collide with them -->
 </a-scene>
