--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
 
 <!-- Mozilla A-Frame Tags -->
 <a-scene physics="debug: false">
-  <a-sky color="#CCCCFF"></a-sky>
+  <a-sky color="#CCF"></a-sky>
 
 
-  <!-- Generate a ground plane -->
-  <a-entity structure>
-    <!-- Disembodied white hands are fine for a prototype -->
-    <a-entity id="left-hand" static-body="shape: sphere; sphereRadius: 0.1" hand-controls="left" trigger-reset></a-entity>
-    <a-entity id="right-hand" static-body="shape: sphere; sphereRadius: 0.1" hand-controls="right" trigger-reset></a-entity>
+  <!-- Disembodied white hands are fine for a prototype -->
+  <!-- Linking a dynamic-body to the hand instead of using a static body would be better, helps prevent things from going flying -->
 
-    <!-- Generates a stack of boxes to destroy -->
-    <!-- <a-box color="#FF0000" dynamic-body position="0.0 2.0 0.0" width="0.1" height="0.1" depth="0.1"></a-box> -->
-  </a-plane>
+  <a-entity id="left-hand" static-body="shape: sphere; sphereRadius: 0.01" hand-controls="left" trigger-reset ></a-entity>
+  <a-entity id="right-hand" static-body="shape: sphere; sphereRadius: 0.01" hand-controls="right" trigger-reset></a-entity>
 
-  <!-- Generate a few buildings that are destroyed when the hands collide with them -->
+  <!-- Make the geometry a destructible -->
+  <a-box width="0.5" height="1.0" depth="0.5" position="0.0 0.5 -2.0" destructible></a-box>
+
+  <!-- Make a non-destructible sphere for testing purposes -->
+
+  <a-sphere radius="0.5" position="0.0 5.5 -2.0" dynamic-body></a-sphere>
+
+  <!-- Make a platform to work on -->
+  <a-plane width="20" height="20" color="#333" rotation="-90 0 0" static-body></a-plane>
+
 </a-scene>
 
 </body>
